Fix for #535 button bar overlapping tooltips

--- a/themes/grav/scss/template/_core.scss
+++ b/themes/grav/scss/template/_core.scss
@@ -19,7 +19,7 @@ b, strong {
 .button-bar {
     text-align: right;
     float: right;
-    z-index: 2;
+    z-index: 0;
 }
 
 .alert {
